feat(mac): 增加统一收藏曲库
